# python-snap7-easy-vars

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg
examples/: example.py
snap7_easy_vars/: __init__.py  connection.py  data.py  fields.py
