[metadata]
name = python-snap7-easy-vars
version = 1.0.2
description = A Python wrapper for the snap7 PLC communication library with easy variable management
author = Marvin Ruciński
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    python-snap7==2.0.2
python_requires = >=3.9

[options.package_data]
python_snap7_easy_vars = py.typed

[tool:pytest]
testpaths = tests